force-app/main/default/objects/LOB_Master__c/LOB_Master__c.object-meta.xml
<CustomObject>
    <description>Master Data Object to store LOB and related informations.</description>
    <label>LOB Master</label>
    <nameField>
        <displayFormat>LOB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOB Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>