force-app/main/default/objects/LOB_Master__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <description>Store Business Unit</description>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>