force-app/main/default/objects/LOB_Master__c/fields/LOB_Code__c.field-meta.xml
<CustomField>
    <fullName>LOB_Code__c</fullName>
    <externalId>true</externalId>
    <label>LOB Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>