force-app/main/default/objects/LOB_Master__c/fields/LOB_Description__c.field-meta.xml
<CustomField>
    <fullName>LOB_Description__c</fullName>
    <description>Store the descriptive value for Line of Businees</description>
    <label>LOB Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>