force-app/main/default/objects/LOB_Master__c/fields/Verticals__c.field-meta.xml
<CustomField>
    <fullName>Verticals__c</fullName>
    <description>Store vertical details for each LOB Code</description>
    <label>Verticals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>