force-app/main/default/objects/LOB_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LOB_Code__c</columns>
    <columns>BusinessUnit__c</columns>
    <columns>Verticals__c</columns>
    <columns>LOB_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>